# API-BANK

./: README.md  bank.db  pyproject.toml
src/apiAuth/: auth.py
src/app/: main.py
src/app/api/: account.py  dependencies.py  transaction.py  transfer.py
src/app/core/: config.py  security.py
src/crud/: account.py  transaction.py  transfer.py  user.py
src/db/: session.py
src/models/: account.py  transaction.py  transfer.py  user.py
src/schemas/: account.py  transaction.py  transfer.py  user.py
tests/: teste.rest
